<resources>
    <string name="app_name">Pile</string>

    <!--分类列表文本-->
    <string-array name="tab_category" >
        <item>新闻</item>
        <item>阅读</item>
        <item>视频</item>
        <item>笑话</item>
    </string-array>


    <!--设置环境文本-->
    <string name="git_rep">https://github.com/xjssjx/Android-Pile</string>
    <string name="setting_show1">源码地址:https://github.com/xjssjx/Android-Pile</string>

    <!--菜单项文本-->
    <string name="menu_setting">设置</string>
    <string name="menu_comment">评论</string>
    <string name="menu_machine">机器聊天</string>


    <!--视频分类表-->
    <string name="art">创意</string>
    <string name="drama">剧情</string>
    <string name="ads">广告</string>
    <string name="record">记录</string>
    <string name="preview">预告</string>
    <string name="trip">旅行</string>

    <!--请求状态文本-->
    <string name="pull_down_refresh">下拉重新刷新</string>
    <string name="click_down_reload">点击重新加载</string>
    <string name="reloading">重新加载…</string>
    <string name="def_empty_view_text">上拉重新刷新</string>

    <!--other-->
    <string name="send">发送</string>
    <string name="video_playcomplete">视频播放结束</string>
    <string name="gif">gif</string>
    <string name="edit_input">输入发送的消息</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>

</resources>
